--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,21 @@
+
 {
-    "version":2,
-    "builds":[{
-        "src":"index.js",
-        "use":   "@vercel/node"
-    }],
-    "routes":[{
-        "src":"/(.*)","dest":"/"
-    }]
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "index.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/static/(.*)",
+        "dest": "/public/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/"
+      }
+    ]
+  }
+  
