--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "pdf-merge-project",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.mjs",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.mjs"
   },
   "keywords": [],
   "author": "",
